--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <nav id="nav-wrap">
          <ul id="nav" class="nav">
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
-            <li><a class="smoothscroll" href="#about">Education</a></li>
-            <li><a class="smoothscroll" href="#resume">Work</a></li>
-            <li><a class="smoothscroll" href="#portfolio">Vo & Org</a></li>
+            <li class="current"><a class="smoothscroll" href="#about" color="black">Education</a></li>
+            <li class="current"><a class="smoothscroll" href="#resume">Work</a></li>
+            <li class="current"><a class="smoothscroll" href="#portfolio">Vo & Org</a></li>
          </ul>
       </nav>
       
@@ -26,8 +26,8 @@
             <hr />
             <ul class="social">
                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+               <li><a href="https://www.instagram.com/adityawelly"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="https://www.twitter.com/teajusapel"><i class="fa fa-twitter"></i></a></li>
             </ul>
          </div>
       </div>
@@ -153,6 +153,13 @@
                   <p class="info">Member of External Relation <span>&bull;</span> <em class="date">2018</em></p>
                </div>
             </div>
+
+            <div class="row item">
+               <div class="twelve columns">
+                  <h3>Badan Eksekutif Mahasiswa</h3>
+                  <p class="info">Member of Social And Community <span>&bull;</span> <em class="date">2018</em></p>
+               </div>
+            </div>
          </div>
        </div>
     </section>
@@ -164,8 +171,8 @@
          <div class="twelve columns">
             <ul class="social-links">
                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+               <li><a href="https://www.instagram.com/adityawelly"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="https://www.twitter.com/teajusapel"><i class="fa fa-twitter"></i></a></li>
             </ul>
 
             <ul class="copyright">
